--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,37 @@ h6 {
     font-family: "Karma", sans-serif
 }
 
+.filterDiv {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
+.container {
+    margin-top: 20px;
+    overflow: hidden;
+}
+
+/* Style the buttons */
+.btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #ddd;
+}
+
+.btn.active {
+    background-color: #666;
+    color: white;
+}
+
 .w3-bar-block .w3-bar-item {
     padding: 20px
 }
